# pxml

./: CLAUDE.md  Cargo.toml  DECISIONS.md  DESIGN.md  README.md
.github/workflows/: ci.yml
examples/: bench.rs
proptest-regressions/: scan.txt
src/: config.rs  event.rs  lib.rs  parse.rs  prelude.rs  scan.rs  stream.rs
